# axiom-ai-evaluation-platform

./: AGENTS.md  AUTONOMY_POLICY.md  CODEX_APP_AUTOPILOT_PROTOCOL.md  CODEX_MODEL_RECOMMENDATION.md  GLOBAL_CONSTRAINTS.md  INSTALL.md  NON_GOALS.md  PROTECTED_FILE_MANIFEST.json  README_START_HERE.md  REPORT_TEMPLATE.md  ROADMAP.md  SELF_AUDIT_CHECKLIST.md  START_PROMPT_FOR_CODEX.md  STOP_CONDITIONS.md  TASK_GRAPH.yaml  VALIDATION_POLICY.md  pyproject.toml
.axiom/reports/: STOP_REPORT.md  task_000_report.md  task_001_report.md  task_002_report.md  task_003_report.md  task_004_report.md  (+20 more)
app/: __init__.py  api.py  ci_gate.py  cli.py  config.py  local_eval.py  main.py  trace_file_import.py
scripts/: axiom_verify.py
specs/: 000_project_scaffold.spec.md  001_core_domain_model.spec.md  002_evaluation_run_engine.spec.md  003_provider_adapters.spec.md  004_rule_based_metrics.spec.md  005_llm_judge_layer.spec.md  006_judge_reliability.spec.md  007_regression_suite.spec.md  008_cli_ci_gate.spec.md  009_trace_import.spec.md  010_in_memory_evaluation_runner.spec.md  011_metric_registry.spec.md  012_evaluation_summary.spec.md  020_local_eval_cli.spec.md  021_gate_summary_integration.spec.md  030_sqlite_persistence.spec.md  031_run_history_queries.spec.md  040_openai_provider_adapter.spec.md  041_provider_failure_taxonomy.spec.md  050_trace_file_import_cli.spec.md  051_regression_promotion_workflow.spec.md  060_evaluation_api_endpoints.spec.md  061_regression_api_endpoints.spec.md  070_packaging.spec.md  071_ci_workflow.spec.md
tests/: test_app_import.py  test_health.py
(+86 files in other folders)
