[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-ai-evaluation-platform"
version = "0.5.0"
description = "A local evaluation and regression platform for loop-based AI systems and LLM applications."
readme = "README_START_HERE.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
]

[project.scripts]
axiom = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
